fix dark mode and bring it to center

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,13 @@
   all: revert;
 }
 
+html.dark {
+  --foreground-rgb: 217, 217, 217;
+  --background-start-rgb: 25, 23, 23;
+  --background-end-rgb: 25, 23, 23;
+  --hr-color: 217, 217, 217;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
